# custom-whisper-server

./: CMakeLists.txt  default.nix  shell.nix
src/: common-whisper.cpp  common-whisper.h  common.cpp  common.h  main.cc
